# asm-workshop

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: CI.yml
asm-lib/: CMakeLists.txt  asm-lib.h  asm-lib.hxx  factorial.asm  sum.asm
cmake/: defaults.cmake  options.cmake  packages.cmake  toolchain-defaults.cmake
tests/: CMakeLists.txt  factorial.cxx  sum.cxx
win32/: CMakeLists.txt
win32/message_box/: CMakeLists.txt  main.asm
